utiliser findBySpecialiteEtTarif pour filtrer les spécialistes dès la sélection de spécialité et tarif et afficher un message si aucun résultat trouvé